--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dependencies:
     
   # image
   camera: ^0.5.8+1
-  # image_picker: ^0.6.7
   multi_media_picker: ^0.2.3
   
   # audio
@@ -54,6 +53,7 @@ dependencies:
 
   # utilities
   share: ^0.6.4+2
+  rxdart: ^0.24.1
   url_launcher: ^5.4.7
   google_fonts: ^1.1.0
   timer_builder: ^1.3.0
